--- a/project1/css/icons.css
+++ b/project1/css/icons.css
@@ -68,7 +68,7 @@
 .i-dashboard:before { content: '\e812'; } /* '' */
 .i-help:before { content: '\e813'; } /* '' */
 .i-messages:before { content: '\e814'; } /* '' */
-.i-page-creator:before { content: '\e815'; } /* '' */
+.i-pages:before { content: '\e815'; } /* '' */
 .i-promotions:before { content: '\e816'; } /* '' */
 .i-search:before { content: '\e817'; } /* '' */
 .i-settings:before { content: '\e818'; } /* '' */
