--- a/project1/css/styles.css
+++ b/project1/css/styles.css
@@ -1,96 +1,144 @@
+/*Bootstrap Overrides */
+.container{
+  padding: 0 !important;
+  width: 840px !important;
+}
+
+/* Top Bar */
 .top-bar{
   width: 100%;
-  background: linear-gradient(-90deg, #2498f4, #1d85d8);
-  font-family: "proxima-nova", sans-serif;
-  font-size: 14pt;
-  font-weight: bold;
+  background: linear-gradient(to bottom, #2498f4, #1d85d8);
+  padding: 6px 0;
 }
 .top-bar a {
   display: inline-block;
   color: white;
-  margin: 15px 0;
-  padding: 0 15px;
+  padding: 2px 8px;
   float: right;
-  border-right: 1px solid #1c85d8;
+  border-left: 1px solid #1c85d8;
+  font-family: "proxima-nova", sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
   transition: color 0.3s;
+}
+.top-bar .top-bar-name{
+  font-size: 10px;
+  line-height: 26px;
+  padding-right: 15px;
+  top: 1;
+}
+.top-bar a:last-of-type{
+  border: none;
+}
+.top-bar a:first-of-type{
+  padding-right: 0;
 }
 .top-bar a:hover {
   text-decoration: none;
   color: #134670;
 }
 
-/* Icons: SVGs converted to font by Fontello.com; */
-@font-face {
-  font-family: 'fontello';
-  src: url('../font/fontello.eot?40615522');
-  src: url('../font/fontello.eot?40615522#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?40615522') format('woff2'),
-       url('../font/fontello.woff?40615522') format('woff'),
-       url('../font/fontello.ttf?40615522') format('truetype'),
-       url('../font/fontello.svg?40615522#fontello') format('svg');
-  font-weight: normal;
-  font-style: normal;
+/* Main Navigation */
+.main-nav{
+  width: 100%;
+  height: 111px;
+  background: #134670;
+  position: relative;
+  display: flex;
 }
 
- [class^="i-"]:before, [class*=" i-"]:before {
-  font-family: "fontello";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
- 
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  /* opacity: .8; */
- 
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
- 
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
- 
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
- 
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
- 
-  /* Font smoothing. That was taken from TWBS */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
- 
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+.main-nav-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
- 
-.icon-avatar_facebook_color:before { content: '\e800'; } /* '' */
-.icon-avatar_facebook_gray:before { content: '\e801'; } /* '' */
-.icon-avatar_foursquare_color:before { content: '\e802'; } /* '' */
-.icon-avatar_foursquare_gray:before { content: '\e803'; } /* '' */
-.icon-avatar_twitter_color:before { content: '\e804'; } /* '' */
-.icon-avatar_twitter_gray:before { content: '\e805'; } /* '' */
-.icon-avatar_youtube_color:before { content: '\e806'; } /* '' */
-.icon-avatar_youtube_gray:before { content: '\e807'; } /* '' */
-.icon-caret_down:before { content: '\e808'; } /* '' */
-.icon-caret_left:before { content: '\e809'; } /* '' */
-.icon-caret_left2:before { content: '\e80a'; } /* '' */
-.icon-caret_right:before { content: '\e80b'; } /* '' */
-.icon-caret_up:before { content: '\e80c'; } /* '' */
-.icon-check:before { content: '\e80d'; } /* '' */
-.icon-icon_-analytics:before { content: '\e80e'; } /* '' */
-.icon-icon_-article:before { content: '\e80f'; } /* '' */
-.icon-icon_-checklist:before { content: '\e810'; } /* '' */
-.icon-icon_-customers:before { content: '\e811'; } /* '' */
-.icon-icon_-dashboard:before { content: '\e812'; } /* '' */
-.icon-icon_-help:before { content: '\e813'; } /* '' */
-.icon-icon_-messages:before { content: '\e814'; } /* '' */
-.icon-icon_-page-creator:before { content: '\e815'; } /* '' */
-.icon-icon_-promotions:before { content: '\e816'; } /* '' */
-.icon-icon_-search:before { content: '\e817'; } /* '' */
-.icon-icon_-settings:before { content: '\e818'; } /* '' */
-.icon-icon_-tip:before { content: '\e819'; } /* '' */
-.icon-person:before { content: '\e81a'; } /* '' */
+.main-nav-background.b-stripes {
+  background-image: url(../img/stripes.png);
+  background-repeat: repeat;
+  height: 75px;
+}
+.main-nav-background.b-shadows {
+  background-image: url(../img/shadows.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.main-nav-fade {
+  height: 100%;
+  flex-grow: 1;
+  flex-basis: 0;
+  z-index: 2;
+}
+.main-nav-fade.f-left{
+  background: linear-gradient(to right, rgba(19, 70, 112, 1), rgba(19, 70, 112, 0));
+}
+.main-nav-fade.f-right{
+  background: linear-gradient(to left, rgba(19, 70, 112, 1), rgba(19, 70, 112, 0));
+}
+
+.main-nav-icons{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  flex-grow: 0;
+  background: none;
+  display: block;
+  height: 100%;
+  z-index: 2;
+  flex-basis: content;
+}
+.main-nav-icons li {
+  display: inline-block;
+  font-size: 48px;
+  color: white;
+  margin: 20px 6px;
+  position: relative;
+  overflow: visible;
+  cursor: pointer;
+  -webkit-transition: background 0.5s;
+  transition: background 0.5s;
+}
+.main-nav-icons li::before {
+  background: #229eff; /* fallback */
+  background: -webkit-linear-gradient(-90deg, #229eff, #1e87da);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-transition: background 0.5s;
+  transition: background 0.5s;
+}
+.main-nav-icons li::after{
+  content: ' ';
+  position: absolute;
+  top: 110%;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-image: url(../img/icon-shadow.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  transition: top 0.5s;
+}
+
+/* Position Tweaks */
+.main-nav-icons li.i-dashboard::before{
+  font-size: 60px;
+}
+.main-nav-icons li.selected::before, li:hover::before{
+  background: #33cc66; /* Fallback */
+  background: -webkit-linear-gradient(-90deg, #33cc66, #93f8b8);
+  -webkit-background-clip: text;
+}
+.main-nav-icons li:hover::after{
+  top: 115%;
+}
+
+.main-nav-icons li.i-customers::before{
+  width: 70px;
+}
+.main-nav-icons li.i-messages::before {
+  width: 55px;
+}
