--- a/project1/css/styles.css
+++ b/project1/css/styles.css
@@ -1,7 +1,14 @@
 /*Bootstrap Overrides */
 .container{
-  padding: 0 !important;
-  max-width: 970px !important;
+  max-width: 970px;
+}
+.row {
+  margin-right: 0;
+  margin-left: 0;
+}
+.row > [class^="col-"], .row > [class*=" col-"] {
+  padding-right: 0;
+  padding-left: 0;
 }
 
 /* Global Styles */
@@ -110,7 +117,7 @@ body {
   -webkit-transition: background 0.5s;
   transition: background 0.5s;
 }
-.main-nav-icons li::before { /* icon font */
+.main-nav-icons li:before { /* icon font */
   background: #229eff; /* fallback for non-webkit */
   background: -webkit-linear-gradient(-90deg, #229eff, #1e87da);
   -webkit-background-clip: text;
@@ -118,7 +125,7 @@ body {
   -webkit-transition: background 0.5s;
   transition: background 0.5s;
 }
-.main-nav-icons li::after{ /* shadow underneath icons*/
+.main-nav-icons li:after{ /* shadow underneath icons*/
   content: ' ';
   position: absolute;
   top: 105%;
@@ -131,23 +138,23 @@ body {
   transition: top 0.5s;
 }
 /* Position Tweaks */
-.main-nav-icons li.i-dashboard::before{
+.main-nav-icons li.i-dashboard:before{
   font-size: 55px;
 }
-.main-nav-icons li.i-customers::before{
+.main-nav-icons li.i-customers:before{
   width: 70px;
 }
-.main-nav-icons li.i-messages::before {
+.main-nav-icons li.i-messages:before {
   width: 55px;
 }
 /* Position Tweaks */
-.main-nav-icons li.selected::before, .main-nav-icons li:hover::before{
+.main-nav-icons li.selected:before, .main-nav-icons li:hover:before{
   background: #33cc66; /* Fallback for non-webkit */
   background: -webkit-linear-gradient(-90deg, #33cc66, #93f8b8);
   -webkit-background-clip: text;
   margin-top: -25px;
 }
-.main-nav-icons li:hover::after{
+.main-nav-icons li:hover:after{
   top: 110%;
 }
 
@@ -172,7 +179,7 @@ body {
 }
 .page-header .page-title {
   display: inline-block;
-  margin: 12px 24px;
+  margin: 19px 24px;
   font-size: 36px;
   font-weight: 400;
   color: white;
@@ -186,10 +193,12 @@ body {
   vertical-align: top;
   float: right;
   border-radius: 2px;
-  border: 1px solid #2db55b;
-  outline-color: #2db55b;
-  outline-offset: -1px;
+  border: 1px solid #2db55b;  
   z-index: 1;
+}
+.page-header .search-box:focus {
+  outline: none;
+  box-shadow: 0 0 2px #1f7a3d;
 }
 .page-header .i-search {
   display: inline-block;
@@ -217,7 +226,7 @@ body {
   padding: 15px;
 }
 /* Using pseudoelement to create the border's gradient border */
-.gradient-border::before {
+.gradient-border:before {
   content: ' ';
   position: absolute;
   z-index: -1;
@@ -234,5 +243,438 @@ body {
   width: 100%;
   background: white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
-  min-height: 1000px;
+  white-space: nowrap;
+  font-size: 0; /* Fix so inline-block elements work */
+}
+
+/* Section Globals */
+.main-column-left {
+  display: inline-block;
+  width: 35%;
+  font-size: 14px;
+  border-right: 1px solid #eee;
+  vertical-align: top;
+}
+.main-column-right {
+  display: inline-block;
+  width: 65%;
+  font-size: 14px;
+  vertical-align: top;
+}
+.bottom-shadow {
+  position: relative;
+  border-bottom: 1px solid #eee;
+  margin-bottom: 5px;
+  z-index: 2;
+}
+.bottom-shadow:after { /* Gradient beneath */
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  top: calc(100% + 1px);
+  left: 0;
+  right: 0;
+  height: 10px;
+  background: linear-gradient(to bottom, #fcfcfc, rgba(255, 255, 255, 0));
+  z-index: 0;
+}
+.section-title{
+  margin: 10px 20px;
+  font-size: 32px;
+  color: #2498f4;
+}
+
+/* Announcements Section */
+.announcements {
+  position: relative;
+  display: flex;
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+.announcements-title {
+  display: inline-block;
+  padding: 20px;
+  padding-left: 20px !important; /* Override column default */
+  padding-right: 35px !important;
+  border-right: 1px solid #eee;
+  font-weight: bold;
+  color: #fe7f13;
+  flex-grow: 0;
+}
+.announcements-text {
+  display: inline-block;
+  color: #777;
+  padding: 20px;
+  padding-left: 15px !important;
+  padding-right: 15px !important;
+  flex-grow: 1;
+  overflow: hidden;
+}
+.announcements-buttons {
+  display: inline-block;
+  border-left: 1px solid #eee;
+  padding: 18px;
+  padding-left: 15px !important;
+  padding-right: 15px !important;
+  text-align: center;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+.announcements-buttons .centered{
+  display: inline;
+}
+.announcements-buttons a {
+  position: relative;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  border-radius: 16px;
+  border: 1px solid #cacaca;
+  box-shadow: 0px 0px 3px #ededed;
+  line-height: 16px;
+  font-size: 22px;
+  color: #fe7f13;
+  text-decoration: none;
+  transition: transform 0.3s;
+}
+.announcements-buttons a:hover {
+  transform: scale(1.1);
+}
+.announcements-buttons a:active {
+  transform: scale(0.9);
+}
+.announcements-buttons a:last-of-type{
+  margin-left: 5px;
+}
+.announcements-buttons a:before {
+  position: relative;
+  top: 5.5px;
+  left: 2.5px;
+  margin: 0;
+}
+.announcements-buttons a.i-caret-right:before {
+    left: 4px;
+}
+
+/* Tasks Section */
+.tasks .section-title{
+  display: inline-block;
+  float: left;
+  margin-bottom: 0;
+}
+.tasks a.i-settings {
+  float: right;
+  margin: 14px 10px 0;
+  font-size: 20px;
+  text-decoration: none;
+  color: #999;
+  transition: color 0.3s, transform 0.3s;
+}
+.tasks a.i-settings:hover {
+  color: #2498f4;
+}
+.tasks a.i-settings:active {
+  transform: scale(0.95);
+}
+.task-list {
+  display: block;
+  clear: both;
+  list-style-type: none;
+  counter-reset: task-counter;
+  padding: 0;
+  margin: 0;
+} 
+.task-list li {
+  padding: 7px 0;
+  font-size: 21px;
+  color: #2498f4;
+  cursor: pointer;
+}
+.task-list li:not(:last-of-type){
+  border-bottom: 1px solid #eee;
+}
+/* Counter technique from https://css-tricks.com/numbering-in-style/ */
+.task-list li:before {
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  margin: 12px 10px 12px 12px;
+  padding-left: 1px;
+  padding-top: 4px;
+  border-radius: 13px;
+  background: #32cc66;
+  content: counter(task-counter);
+  counter-increment: task-counter;
+  font-size: 18px;
+  line-height: 18px;
+  color: white;
+  text-align: center;
+}
+.task-list li button {
+  position: relative;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  background: white;
+  color: #2498f4;
+  float: right;
+  margin: 10px 8px;
+  padding-left: 30px;
+  font-size: 15px;
+  vertical-align: middle;
+  text-align: center;
+  width: 58px;
+  cursor: pointer;
+}
+.task-list li button:before {
+  position: absolute;
+  font-size: 20px;
+  left: 1px;
+  top: 4px;
+}
+.task-list li:hover {
+  color: #ccc;
+}
+.task-list li:hover:before {
+  background: #ccc;
+}
+.task-list li:hover button {
+  color: #ccc;
+}
+
+/* Analytics Section */
+.analytics .section-title {
+  margin-top: 20px;
+}
+.analytics .subtitle {
+  font-size: 13px;
+  text-transform: uppercase;
+  color: #999;
+  margin-bottom: 20px;
+}
+.analytics-columns {
+  margin-top: 20px;
+  display: flex;
+}
+.analytics-activity {
+  position: relative;
+  display: inline-block;
+  width: 78%;
+  border-right: 1px solid #eee;
+  padding: 0 20px;
+}
+.analytics-activity:after {
+  content: ' ';
+  position: absolute;
+  left: 100%;
+  top: 0;
+  height: 100%;
+  width: 4px;
+  background: linear-gradient(to right, #eee, white);
+}
+.analytics-activity .subtitle {
+  display: inline-block;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+.activity-select {
+  position: relative;
+  float: right;
+  margin-right: 20px;
+  cursor: pointer;
+}
+.activity-select .custom-select{
+  background: none;
+  padding-right: 50px;
+  z-index: 2;
+  cursor: pointer;
+}
+.activity-select .custom-select:focus{
+  border-color: #2498f4;
+}
+.activity-select .i-caret-left {
+  position: absolute;
+  right: 5px;
+  top: 1px;
+  height: calc(100% - 2px);
+  width: 35px;
+  padding-left: 8px;
+  border-left: 1px solid #f5f5f5;
+  z-index: 0;
+  color: #fe7f13;
+  pointer-events: none;
+  cursor: pointer;
+}
+.activity-select .i-caret-left:before{
+  position: absolute;
+  left: 6px;
+  top: 2px;
+  font-size: 26px;
+  transform: rotate(-90deg);
+}
+.activity-graph {
+  display: block;
+  width: 100%;
+  margin: 15px 0;
+}
+.analytics-pies {
+  display: inline-block;
+  width: 22%;
+  height: 200px;
+  padding: 15px 20px;
+}
+.pie-chart{
+  margin-bottom: 20px;
+}
+.pie-chart .subtitle {
+  margin-left: 4px;
+  margin-bottom: 8px;
+}
+
+.analytics-checkboxes{
+  text-align: center;
+  padding: 30px;
+}
+.analytics-checkbox {
+  display: inline-block;
+  margin: 0 5px;
+  vertical-align: bottom;
+}
+.analytics-checkbox .checkbox-container {
+  position: relative;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  top: 8px;
+  margin-right: 4px;
+  cursor: pointerr;
+}
+.checkbox-container input {
+  position: absolute;
+  z-index: 4;
+  width: 150%;
+  height: 150%;
+  top: -25%;
+  left: -25%;
+  opacity: 0;
+  cursor: pointer;
+}
+.checkbox-container .custom-checkbox {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #e7e7e7;
+  border-radius: 3px;
+  overflow: visible;
+  pointer-events: none;
+  text-shadow: outset 0px 0px 1px #333;
+}
+.checkbox-container .custom-checkbox:before {
+  z-index: 3;
+  position: absolute;
+  background: #f90; /* fallback for non-webkit */
+  background: -webkit-linear-gradient(to right, #f90, #f60);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 66px;
+  top: -6px;
+  left: -13px;
+  text-shadow: outset 0px 0px 1px #eee;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+.checkbox-container .custom-checkbox:after {
+  content: ' ';
+  position: absolute;
+  z-index: 2;
+  top: 3px;
+  left: 3px;
+  width: 17px;
+  height: 17px;
+  background: linear-gradient(to bottom, #d8d8d8, #e9e9e9);
+  border: 1px solid #cbcbcb;
+  transition: transform 0.1s;
+}
+.checkbox-container input:checked ~ .custom-checkbox:before{
+  opacity: 1;
+}
+.checkbox-container input:checked ~ .custom-checkbox:after{
+  transform: scale(0);
+}
+
+.analytics-checkbox label {
+  display: inline-block;
+  color: white;
+  border-radius: 4px;
+  padding: 2px 10px 2px 5px;
+}
+.l-facebook{
+  background: #114570;
+}
+.l-twitter{
+  background: #2298f4;
+}
+.l-foursquare{
+  background: #3a599b;
+}
+.l-googleplus{
+  background: #31cc66;
+}
+
+/* Recommendations Section */
+.recommendations-list {
+  padding: 0 10px;
+}
+.recommendations-list li{
+  position: relative;
+  list-style-type: none;
+  font-size: 16px;
+  line-height: 18px;
+  color: #777;
+  vertical-align: top;
+  padding: 23px 50px 10px;
+  overflow: hidden;
+  white-space: normal;
+  border-bottom: 1px dotted #eee;
+  cursor: pointer;
+  transition: color 0.2s;
+}
+.recommendations-list li:before {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  font-size: 30px;
+  color: #3c6;
+  vertical-align: top;
+}
+.recommendations-list li.i-check:before {
+  font-size: 60px;
+  left: -5px;
+  top: 10px;
+}
+.recommendations-list li:after {
+  display: block;
+  position: absolute;
+  top: 7px;
+  left: 50px;
+  font-size: 10px;
+  color: #999;
+  transition: color 0.2s;
+}
+.recommendations-list li.i-article:after {
+  content: 'Article';
+}
+.recommendations-list li.i-check:after {
+  content: 'Checklist';
+}
+.recommendations-list li.i-tip:after {
+  content: 'Tip';
+}
+.recommendations-list li:hover {
+  color: black;
+}
+.recommendations-list li:hover:after{
+  color: #333;
 }
