--- a/project1/css/styles.css
+++ b/project1/css/styles.css
@@ -250,6 +250,10 @@ body {
   font-size: 0; /* Fix so inline-block elements work */
 }
 
+section {
+  white-space: normal;
+}
+
 /* Section Globals */
 .main-columns {
   display: flex;
@@ -302,6 +306,7 @@ body {
   margin-bottom: 5px;
   font-size: 14px;
   width: 100%;
+  white-space: nowrap;
 }
 .announcements-title {
   display: inline-block;
@@ -466,6 +471,7 @@ body {
 .analytics-columns {
   margin-top: 20px;
   display: flex;
+  flex-flow: row wrap;
 }
 .analytics-activity {
   position: relative;
@@ -531,7 +537,6 @@ body {
 .analytics-pies {
   display: inline-block;
   width: 22%;
-  height: 200px;
   padding: 15px 20px;
 }
 .pie-chart{
@@ -648,7 +653,6 @@ body {
   vertical-align: top;
   padding: 23px 50px 10px;
   overflow: hidden;
-  white-space: normal;
   border-bottom: 1px dotted #eee;
   cursor: pointer;
   transition: color 0.2s;
@@ -787,7 +791,6 @@ body {
 }
 .quote-content p {
   font-size: 15px;
-  white-space: normal;
   line-height: 16px;
   margin: 0;
 }
@@ -888,8 +891,10 @@ body {
 .bottom-bar .container {
   display: flex;
   align-items: center;
+  flex-flow: row wrap;
 }
 .bottom-links {
+  order: 1;
   flex-grow: 0;
   padding: 14px;
   list-style-type: none;
@@ -911,6 +916,7 @@ body {
   color: #2498f2;
 }
 .bottom-notif {
+  order: 2;
   flex-grow: 1;
   padding: 16px;
   border-right: 1px solid #ddd;
@@ -948,6 +954,7 @@ body {
   transform: rotate(-90deg);
 }
 .bottom-logout {
+  order: 3;
   flex-grow: 0;
   padding-left: 10px;
   border-right: 1px solid #ddd;
@@ -961,6 +968,7 @@ body {
   box-shadow: 0 1px 3px rgba(0,0,0, 0.45);
 }
 .bottom-logout a {
+
   display: inline-block;
   margin: 16px 10px;
   color: #2498f2;
@@ -972,6 +980,7 @@ body {
   color: #134670;
 }
 .bottom-social {
+  order: 4;
   flex-grow: 0;
   padding: 16px 12px;
   border-right: 1px solid #ddd;
@@ -1061,8 +1070,8 @@ body {
     padding: 0 10px 10px;
     width: 100%;
     order: 3;
-    white-space: normal;
     text-align: center;
+    white-space: normal;
   }
   .main-column-left {
     display: block;
@@ -1073,5 +1082,86 @@ body {
     display: block;
     width: 100%;
     order: 1;
+  }
+  .analytics-activity {
+    width: 100%;
+    border-right: 0;
+  }
+  .analytics-activity:after {
+    display: none;
+  }
+  .analytics-activity .subtitle {
+    margin-left: 0;
+  }
+  .activity-select {
+    margin-right: 0;
+  }
+  .analytics-pies {
+    width: 100%;
+    text-align: center;
+  }
+  .pie-chart {
+    display: inline-block;
+    width: 40%;
+    text-align: center;
+    margin-left: 0 4%;
+    padding-bottom: 0;
+  }
+  .pie-chart .subtitle {
+    text-align: left;
+  }
+  .analytics-checkboxes {
+    padding-top: 0;
+  }
+  .count-card {
+    margin: 35px 35px 20px;
+  }
+  .quote {
+    padding: 10px;
+  }
+  .quote-content {
+    margin: 25px 15px;
+  }
+  .features {
+    padding: 10px 0;
+  }
+  .feature-card {
+    margin: 10px 8px;
+  }
+  .bottom-links {
+    border-right: none;
+    order: 2;
+    flex-grow: 0;
+    width: 90px;
+  }
+  .bottom-links a {
+    display: block;
+    padding-left: 0;
+    border: none;
+  }
+  .bottom-notif {
+    border-right: none;
+    width: 100%;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 5px;
+    font-size: 10px;
+    order: 1;
+  }
+  .bottom-notif .i-caret-right {
+    top: -3px;
+    left: -8px;
+  }
+  .bottom-notif .i-caret-right:hover {
+    /*top: -30px;*/
+  }
+  .bottom-logout {
+    border-left: 1px solid #ddd;
+    text-align: center;
+    flex-grow: 1;
+  }
+  .bottom-social {
+    border-right: none;
+    width: 90px;
+    flex-grow: 0;
   }
 }
