--- a/project1/css/styles.css
+++ b/project1/css/styles.css
@@ -312,7 +312,11 @@ section {
   white-space: nowrap;
 }
 .announcements-title {
+  font-size: inherit;
+  font-weight: inherit;
+  line-height: inherit;
   display: inline-block;
+  margin: 0;
   padding: 18px 30px 14px 15px;
   border-right: 1px solid #eee;
   text-transform: uppercase;
